--- a/app/index.css
+++ b/app/index.css
@@ -1,5 +1,13 @@
 body {
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+  font-family: -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen-Sans,
+    Ubuntu,
+    Cantarell,
+    Helvetica Neue,
+    sans-serif;
 }
 
 ul {
@@ -25,15 +33,18 @@ li {
   font-weight: bold;
   cursor: pointer;
 }
+
 .popular-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
 .popular-item {
   margin: 20px;
   text-align: center;
 }
+
 .space-list-items {
   margin-bottom: 7px;
 }
@@ -42,15 +53,18 @@ li {
   width: 150px;
   border-radius: 50%;
 }
+
 .popular-rank {
   font-size: 20px;
   margin: 10px;
 }
+
 .nav {
   display: flex;
 }
+
 .active {
-  font-weight: bold;  
+  font-weight: bold;
 }
 
 .nav li {
@@ -61,11 +75,13 @@ a {
   text-decoration: none;
   color: #d0021b;
 }
+
 .home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .button {
   color: #e6e6e6;
   background: #0a0a0a;
@@ -80,7 +96,7 @@ a {
 }
 
 .button:hover:enabled {
-  background: linear-gradient(#1a1a1a,#0a0a0a);
+  background: linear-gradient(#1a1a1a, #0a0a0a);
   color: #fff;
   text-decoration: none;
 }
@@ -88,10 +104,12 @@ a {
 .button:active {
   transform: translateY(1px);
 }
+
 .row {
   display: flex;
   justify-content: space-around;
 }
+
 .column {
   display: flex;
   flex-direction: column;
@@ -119,6 +137,7 @@ a {
   font-size: 30px;
   font-weight: 200;
 }
+
 .reset {
   border: none;
   background: transparent;
