--- a/app/index.css
+++ b/app/index.css
@@ -1,152 +1,139 @@
-body {
-  font-family: -apple-system,
-    BlinkMacSystemFont,
-    Segoe UI,
-    Roboto,
-    Oxygen-Sans,
-    Ubuntu,
-    Cantarell,
-    Helvetica Neue,
-    sans-serif;
-}
-a {
-  text-decoration: none;
-  color: #d0021b;
-}
-
-ul {
-  padding: 0;
-}
-
-li {
-  list-style: none;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.languages {
-  display: flex;
-  justify-content: center;
-}
-
-.languages > li {
-  margin: 10px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.popular-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.popular-item {
-  margin: 20px;
-  text-align: center;
-}
-
-.space-list-items {
-  margin-bottom: 7px;
+.active {
+font-weight:700;
 }
 
 .avatar {
-  width: 150px;
-  border-radius: 50%;
-}
-
-.popular-rank {
-  font-size: 20px;
-  margin: 10px;
-}
-
-.nav {
-  display: flex;
-}
-
-.nav li {
-  margin-right: 15px;
-}
-
-.active {
-  font-weight: bold;
-}
-
-.home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+border-radius:50%;
+width:150px;
 }
 
 .button {
-  color: #e6e6e6;
-  background: #0a0a0a;
-  border: none;
-  font-size: 16px;
-  border-radius: 3px;
-  width: 200px;
-  text-align: center;
-  display: block;
-  padding: 7px 0;
-  margin: 10px auto;
-}
-
-.button:hover:enabled {
-  background: linear-gradient(#1a1a1a, #0a0a0a);
-  color: #fff;
-  text-decoration: none;
+background:#0a0a0a;
+border:none;
+border-radius:3px;
+color:#e6e6e6;
+display:block;
+font-size:16px;
+margin:10px auto;
+padding:7px 0;
+text-align:center;
+width:200px;
 }
 
 .button:active {
-  transform: translateY(1px);
+transform:translateY(1px);
 }
 
-.row {
-  display: flex;
-  justify-content: space-around;
+.button:hover:enabled {
+background:linear-gradient(#1a1a1a,#0a0a0a);
+color:#fff;
+text-decoration:none;
 }
 
 .column {
-  display: flex;
-  flex-direction: column;
-  width: 500px;
-  align-items: center;
+align-items:center;
+display:flex;
+flex-direction:column;
+width:500px;
 }
 
 .column input {
-  border-radius: 3px;
-  margin: 10px 0;
-  padding: 5px;
-  border: 1px solid rgba(0, 0, 0, 0.43);
-  font-size: 16px;
-  width: 80%;
+border:1px solid rgba(0,0,0,0.43);
+border-radius:3px;
+font-size:16px;
+margin:10px 0;
+padding:5px;
+width:80%;
 }
 
-.column label {
-  text-align: center;
-  font-size: 30px;
-  font-weight: 200;
+.column label,.header {
+font-size:30px;
+font-weight:200;
+text-align:center;
 }
 
-.header {
-  text-align: center;
-  font-size: 30px;
-  font-weight: 200;
+.container {
+margin:0 auto;
+max-width:1200px;
+}
+
+.home-container {
+align-items:center;
+display:flex;
+flex-direction:column;
+}
+
+.languages {
+display:flex;
+justify-content:center;
+}
+
+.languages > li {
+cursor:pointer;
+font-weight:700;
+margin:10px;
+}
+
+.nav {
+display:flex;
+}
+
+.nav li {
+margin-right:15px;
+}
+
+.popular-item {
+margin:20px;
+text-align:center;
+}
+
+.popular-list {
+display:flex;
+flex-wrap:wrap;
+justify-content:space-around;
+}
+
+.popular-rank {
+font-size:20px;
+margin:10px;
 }
 
 .reset {
-  border: none;
-  background: transparent;
-  color: #d0021b;
-  display: block;
-  width: 100%;
-  text-align: center;
+background:transparent;
+border:none;
+color:#d0021b;
+display:block;
+text-align:center;
+width:100%;
 }
 
 .reset:hover {
-  cursor: pointer;
-  font-weight: bold;
+cursor:pointer;
+font-weight:700;
+}
+
+.row {
+display:flex;
+justify-content:space-around;
+}
+
+.space-list-items {
+margin-bottom:7px;
+}
+
+a {
+color:#d0021b;
+text-decoration:none;
+}
+
+body {
+font-family: BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
+}
+
+li {
+list-style:none;
+}
+
+ul {
+padding:0;
 }
